--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "package",
+  "name": "clash-split-tunnel",
   "version": "1.0.0",
-  "description": "An Electron application with React and TypeScript",
+  "description": "An application to generate Clash config for split tunneling",
   "main": "./out/main/index.js",
-  "author": "example.com",
-  "homepage": "https://electron-vite.org",
+  "author": "quverok",
+  "homepage": "",
   "scripts": {
     "format": "prettier --write .",
     "lint": "eslint --cache .",
