--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -3,6 +3,8 @@
   "include": ["electron.vite.config.*", "src/main/**/*", "src/preload/**/*"],
   "compilerOptions": {
     "composite": true,
-    "types": ["electron-vite/node"]
+    "tsBuildInfoFile": ".tsbuildinfo.node",
+    "moduleResolution": "bundler",
+    "allowSyntheticDefaultImports": true
   }
 }
